add assets and html

--- a/index.html
+++ b/index.html
@@ -3,9 +3,91 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>CV</title>
 </head>
 <body>
-    
+    <header>
+        <div class="photo">
+            <img src="assets/img/img-profil.jpg" alt="photo de profil">
+        </div>
+        <div class="des">
+            <h1>Hocquet Jeremy</h1>
+            <p id="post">Développeur Web et Web Mobile</p>
+            <a href="mailto:jeremok06@gmail.com"><img src="assets/img/mail.png" alt="logo mail">Mail</a>
+            <a href="https://www.google.fr/maps/place/36+Chem.+de+la+Font+des+Muls,+06580+Pégomas/@43.596007,6.9340158,17z/data=!3m1!4b1!4m6!3m5!1s0x12cc2813f30ac76b:0xccced94d5e41be96!8m2!3d43.596007!4d6.9365907!16s%2Fg%2F11c1r0jrw_?entry=ttu&g_ep=EgoyMDI1MDMwNC4wIKXMDSoASAFQAw%3D%3D"><img src="assets/img/adress.png" alt="logo adress">Adresse</a>
+            <a href="tel:0783588661"><img src="assets/img/phone.png" alt=" logo téléphone">Téléphone</a>
+            <p><img src="assets/img/car.png" alt="logo voiture">Permis B</p>
+        </div>
+    </header>
+    <main>
+        <section class="section-left">
+            <div class="competences">
+                <h2>Compétences</h2>
+                <hr class="light">
+                <p>HTML <div class="star">★★★★☆</div></p>
+                <p>CSS <div class="star">★★★★☆</div></p>
+            </div>
+            <!--A modif-->
+            <div class="langues">
+                <h2>Langues</h2>
+                <hr class="light">
+                <p>Français <div>Langue maternelle</div></p>
+                <p>Anglais <div>Professionnel</div></p>
+                <p>Italien <div>Notions</div></p>
+            </div>
+            <div class="qualites">
+                <h2>Qualités</h2>
+                <hr class="light">
+                <ul>
+                    <li>Esprit d'équipe</li>
+                    <li>Autonomie</li>
+                    <li>Organisation</li>
+                    <li>Créativité</li>
+                </ul>
+            </div>
+            <div class="interets">
+                <h2>Centres d'intérêt</h2>
+                <hr class="light">
+                <ul>
+                    <li>Tir à l'arc</li>
+                    <li>Jeux vidéo</li>
+                </ul>
+            </div>
+        </section>
+        <section class="section-right">
+            <!--A modif-->
+            <div class="profil">
+                <h2>Profil</h2>
+                <hr class="light">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid cumque ullam aliquam facilis ut illum fuga unde sed consectetur nemo. Numquam eum architecto quas iure quae perspiciatis aliquid temporibus explicabo.</p>
+            </div>
+            <!--A modif-->
+            <div class="formations">
+                <h2>Formations</h2>
+                <hr class="light">
+                <p>Titre Professionnel DWWM - 2023/2024</p>
+                <p>Baccalauréat - 2022</p>
+            </div>
+            <!--A modif-->
+            <div class="stages">
+                <h2>Stages</h2>
+                <hr class="light">
+                <p>Peintre en bâtiment</p>
+            </div>
+            <!--A modif-->
+            <div class="experince">
+                <h2>Expérience professionnelle</h2>
+                <hr class="light">
+                <p>Préparateur - Conditionneur Kerry septembre 2023 - decembre 2023, juin 2024 - aout 2024</p>
+                <p>Electricien - Plombier - Climaticien E4 novembre 2024</p>
+            </div>
+        </section>
+    </main>
+    <footer>
+        <div class="resaux">
+            <a href="https://github.com/Doarj"><img src="assets/img/github.png" alt="logo github"></a>
+        </div>
+        <small>Mis à jour le : 10/03/2025</small>
+    </footer>
 </body>
 </html>
